# prosoftschool2023

./: .clang-format  .gitignore  README.md  serverDiag.drawio
devicemonitoringserver/: CMakeLists.txt  base_encoder_executor.h  big_endian.h  command_center.cpp  command_center.h  common.h  devicemock.cpp  devicemock.h  devicemonitoringserver.cpp  devicemonitoringserver.h  devicemonitoringserver.qbs  deviceworkschedule.h  dummy_encoder_executor.h  main.cpp  message.h  message_command.h  message_encoder.cpp  message_encoder.h  message_error.h  message_meterage.h  message_serializer.cpp  message_serializer.h  mirror_encoder_executor.cpp  mirror_encoder_executor.h  multiply41_encoder_executor.cpp  multiply41_encoder_executor.h  rot3_encoder_executor.cpp  rot3_encoder_executor.h  test_runner.h  tests.cpp  tests.h
devicemonitoringserver/handlers/: abstractaction.h  abstractmessagehandler.h  abstractnewconnectionhandler.h
devicemonitoringserver/server/: abstractclientconnection.h  abstractconnection.h  abstractconnectionserver.h
devicemonitoringserver/servermock/: clientconnectionmock.cpp  clientconnectionmock.h  connectionchannel.cpp  connectionchannel.h  connectionmock.cpp  connectionmock.h  connectionservermock.cpp  connectionservermock.h  object.cpp  object.h  servertests.cpp  servertests.h  taskqueue.cpp  taskqueue.h
